updates for accessibility and added a section about RHWO research to projects page

--- a/gifs.qmd
+++ b/gifs.qmd
@@ -2,7 +2,9 @@
 title: "Gif Gallery"
 ---
 
-To collect data for my research on Red-headed Woodpecker (<i>Melanerpes erythrocephalus</i>) parental care behavior, I recorded a few hundred hours of video. The videos I recorded are of breeding pairs at nest cavities from 2017-2018 at Fort A.P. Hill, Virginia, USA. I converted some of the most interesting clips into gifs to share with the public, and invite you to use these under the <a href = "https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA License</a>.
+In 2017 and 2018, I recorded a few hundred hours of [Red-headed Woodpecker](https://www.allaboutbirds.org/guide/Red-headed_Woodpecker/overview) (<i>Melanerpes erythrocephalus</i>) videos for my research on parental care behavior as part of my Master's work with the [Bulluck Avian Ecology Lab](https://rampages.us/bullucklab/). Woodpeckers were captured and given special leg bands in unique color combinations so I could tell them apart. Breeding pairs were then recorded at nest cavities from May to August at Fort A.P. Hill, Virginia, USA. I converted some of the most interesting clips into gifs to share with the public. Feel free to use the gifs below under the [CC BY-SA License](https://creativecommons.org/licenses/by-sa/4.0/). 
+
+Want to learn more? Check out a [summary of the results of my research](https://lawalter.github.io/projects.html#research)!
 
 ## Cleaning
 
