--- a/research.qmd
+++ b/research.qmd
@@ -7,7 +7,7 @@ I studied parental care behavior, home range size, and feather reflectance of Re
 
 ## Parental care behavior
 
-What do Red-headed Woodpecker moms and dads have in common? Withput plumage or significant size differences, they look virtually identical. And they're both great parents! Below is a summary of my research using a series of infographics. To learn more, check out my [parental care publication](https://journal.afonet.org/vol93/iss2/art3/JFO-2022-89.pdf) or the [parental care data repository](https://github.com/lawalter/rhwo-parental-care).
+What do Red-headed Woodpecker moms and dads have in common? Withput plumage or significant size differences, they look virtually identical. And they're both great parents! Below is a summary of my research using a series of infographics. To learn more, check out my [parental care publication](https://journal.afonet.org/vol93/iss2/art3/JFO-2022-89.pdf) or [data repository](https://github.com/lawalter/rhwo-parental-care).
 
 ![](images/rhwo_parental_care.png){fig-alt="Red-headed Woodpecker parental care results summary. Ninety-nine percent of all woodpecker species are sexually dimorphic; less than one percent are truly monomorphic. Red-headed and Lewis's Woodpeckers are the only monomorphic woodpeckers. Since males and females are hard to tell apart in monomorphic species, parental care behaviors are often under-studied. We used DNA to sex color-banded Red-headed Woodpeckers and video-recorded their parental care. Males did nearly all of the nest cleaning. Provisioning, also known as feeding chicks, was equal. Incubation and diurnal brooding was done by females more." fig-align="center"}
 
