--- a/about.qmd
+++ b/about.qmd
@@ -3,6 +3,6 @@ title: "About"
 page-layout: full
 ---
 
-I am a certified [Associate Wildlife Biologist](https://wildlife.org/learn/professional-development-certification/certification-programs/) with a B.Sc. from the University of Delaware and M.Sc. from the [Bulluck Avian Ecology Lab](https://rampages.us/bullucklab/) at Virginia Commonwealth University. Most of my background is in wildlife biology, but I also like coding and programming. I learned how to wrangle data at the Smithsonian Migratory Bird Center and now work managing data full-time with the U.S. Fish and Wildlife Service Migratory Bird Program. In my free time, I enjoy camping, traveling, and birding with my wife and dog.
+I am a certified [Associate Wildlife Biologist](https://wildlife.org/learn/professional-development-certification/certification-programs/) with a B.Sc. from the University of Delaware and M.Sc. from the [Bulluck Avian Ecology Lab](https://rampages.us/bullucklab/) at Virginia Commonwealth University. Most of my background is in wildlife biology, but I also like coding and programming. I learned how to wrangle data at the Smithsonian Migratory Bird Center and now work analyzing data for the U.S. Fish & Wildlife Service Migratory Bird Program. In my free time, I enjoy camping, traveling, and birding with my wife and dog.
 
 ![](images/dog.png){fig-alt="A photo of Abby's dog" fig-align="center" width=60%}
