--- a/coding.qmd
+++ b/coding.qmd
@@ -3,9 +3,9 @@ title: "Code Projects"
 page-layout: full
 ---
 
-Below are some past and current personal projects mostly done in R or R Shiny. I am currently learning Python and hope to learn Julia next. Click the Github icon inside each box to view the project repository.
+Below are some projects that are hosted on [my GitHub](https://github.com/lawalter). These featured repositories showcase my past and present use of different programming languages and frameworks. I regularly work in R and I have experience with R Shiny, R Markdown, Quarto, and creating R packages. Moving forward, I am excited to pick up Julia and try out the Genie framework. 
 
-To see the R packages I created and maintain in an official capacity, check out the [USFWS GitHub](https://github.com/search?q=org%3AUSFWS+migbird&type=repositories).
+The GitHub icon {{< fa brands github title = "Example GitHub icon" >}} in each card links to the project repository.
 
 ## Apps
 
@@ -18,9 +18,11 @@ To see the R packages I created and maintain in an official capacity, check out 
   <div class="card-body">
   ![](images/gh_app.png){fig-alt="Screenshot of Garden Helper application" fig-align="center"}
 
-<span class="badge rounded-pill bg-warning">In development</span> <span class="badge rounded-pill bg-secondary">2022-present</span> [{{< fa brands github title = "GitHub link to Garden Helper repository" >}}](https://github.com/lawalter/gardenhelpr)
+<span class="badge rounded-pill bg-warning">In development</span> <span class="badge rounded-pill bg-secondary">2022</span> [{{< fa brands github title = "GitHub link to Garden Helper repository" >}}](https://github.com/lawalter/gardenhelpr)
 
-<p class="card-text">I started this R Shiny app to assist in backyard garden planning. Initially, I had an idea to calculate the mean pH requirements of all of the plants I was hoping to grow in my yard. As I did more research, I learned about the benefits of companion planting (and drawbacks to planting "enemies" together)! When completed, the gardenhelpr app will be able to take a list of plants a user is planning to grow and output both (1) ideal growing conditions (pH, soil, light, etc) as well as (2) any plant relationships and subsequent spacing recommendations.</p>
+<p class="card-text">I started the [gardenhelpr](https://github.com/lawalter/gardenhelpr) R Shiny app to assist in backyard garden planning. When completed, it will take a list of plants the user is planning to grow and output ideal growing conditions (pH, soil, light, etc) as well as companion and antagonist relationship recommendations.</p>
+
+<p class="card-text">`#R` `#RShiny` `#ggplot2`</p>
   </div>
 </div>
 
@@ -35,7 +37,32 @@ To see the R packages I created and maintain in an official capacity, check out 
 
 <span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2020</span> [{{< fa brands github title = "GitHub link to Colorband Combination Generator repository >}}](https://github.com/lawalter/colorband-app) 
 
-<p class="card-text">Created as a test case for my [r-shiny-electron-app](https://github.com/lawalter/r-shiny-electron-app) repository, this is a simple R Shiny app packaged with Electron that creates random color combinations for bird banding. Colors can be selected based on what's available in a banding kit, and selections are saved for future use via [shinyStore](https://github.com/trestletech/shinyStore).</p>
+<p class="card-text">The [Colorband Combination Generator](https://github.com/lawalter/colorband-app) app was created with R Shiny and packaged with Electron. It creates random color combinations for bird banding. Colors can be selected based on what's available in a banding kit, and selections are saved for future use via [shinyStore](https://github.com/trestletech/shinyStore).</p>
+
+<p class="card-text">`#R` `#RShiny`</p>
+  </div>
+</div>
+
+:::
+
+:::
+
+## Data analysis
+
+::: {.grid}
+
+::: {.g-col-12 .g-col-md-6}
+
+<div class="card bg-light mb-3">
+  <div class="card-header">RHWO Parental Care</div>
+  <div class="card-body">
+  ![](images/rhwo.jpg){fig-alt="Photo of Red-headed Woodpecker" fig-align="center"}
+
+<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2017-2023</span> [{{< fa brands github title = "GitHub link to Red-headed Woodpecker parental care repository" >}}](https://github.com/lawalter/rhwo-parental-care)
+
+<p class="card-text">The [RHWO Parental Care](https://github.com/lawalter/rhwo-parental-care) repository contains data, metadata, code, and figures pertaining to my Master's research data analyses.</p>
+
+<p class="card-text">`#R` `#tidyverse` `#ggplot2`</p>
   </div>
 </div>
 
