--- a/coding.qmd
+++ b/coding.qmd
@@ -5,8 +5,6 @@ page-layout: full
 
 Below are some projects that are hosted on [my GitHub](https://github.com/lawalter). These featured repositories showcase my past and present use of different programming languages and frameworks. I regularly work in R and I have experience with R Shiny, R Markdown, Quarto, and creating R packages. Moving forward, I am excited to pick up Julia and try out the Genie framework. 
 
-The GitHub icon {{< fa brands github title = "Example GitHub icon" >}} in each card links to the project repository.
-
 ## Apps
 
 ::: {.grid}
@@ -18,7 +16,7 @@ The GitHub icon {{< fa brands github title = "Example GitHub icon" >}} in each c
   <div class="card-body">
   ![](images/gh_app.png){fig-alt="Screenshot of Garden Helper application" fig-align="center"}
 
-<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2022-2023</span> [{{< fa brands github title = "GitHub link to Garden Helper repository" >}}](https://github.com/lawalter/gardenhelpr)
+<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2022-2023</span> 
 
 <p class="card-text">I created the [gardenhelpr](https://github.com/lawalter/gardenhelpr) R Shiny app to assist in backyard garden planning. The app generates an interactive visualization of companion and antagonist plants from the user's input. A full list of friends and foes can be downloaded as a csv.</p>
 
@@ -35,7 +33,7 @@ The GitHub icon {{< fa brands github title = "Example GitHub icon" >}} in each c
   <div class="card-body">
   ![](images/app_img_m.png){fig-alt="Screenshot of Colorband Combination desktop app" fig-align="center"}
 
-<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2020</span> [{{< fa brands github title = "GitHub link to Colorband Combination Generator repository >}}](https://github.com/lawalter/colorband-app) 
+<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2020</span> 
 
 <p class="card-text">The [Colorband Combination Generator](https://github.com/lawalter/colorband-app) app was created with R Shiny and packaged with Electron. It creates random color combinations for bird banding. Colors can be selected based on what's available in a banding kit, and selections are saved for future use via [shinyStore](https://github.com/trestletech/shinyStore).</p>
 
@@ -58,7 +56,7 @@ The GitHub icon {{< fa brands github title = "Example GitHub icon" >}} in each c
   <div class="card-body">
   ![](images/rhwo.jpg){fig-alt="Photo of Red-headed Woodpecker" fig-align="center"}
 
-<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2017-2022</span> [{{< fa brands github title = "GitHub link to Red-headed Woodpecker parental care repository" >}}](https://github.com/lawalter/rhwo-parental-care)
+<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2017-2022</span> 
 
 <p class="card-text">The [RHWO Parental Care](https://github.com/lawalter/rhwo-parental-care) repository contains data, metadata, code, and figures pertaining to my Master's research data analyses.</p>
 
@@ -80,9 +78,9 @@ The GitHub icon {{< fa brands github title = "Example GitHub icon" >}} in each c
   <div class="card-header">Shiny Electron App Creation Guide</div>
   <div class="card-body">
 
-<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2020</span> [{{< fa brands github title = "GitHub link to R Shiny Electron App repository" >}}](https://github.com/lawalter/r-shiny-electron-app) 
+<span class="badge rounded-pill bg-success">Complete</span> <span class="badge rounded-pill bg-secondary">2020</span> 
 
-<p class="card-text">I wrote a step-by-step guide to creating a desktop application with R Shiny on both macOS and Windows using Electron.</p>
+<p class="card-text">I wrote a step-by-step [guide to creating a desktop application](https://github.com/lawalter/r-shiny-electron-app) with R Shiny using Electron on both macOS and Windows.</p>
   </div>
 </div>
 
